<resources>
    <string name="app_name">Time Frenzy</string>

    <string name="action_settings">Settings</string>

    <string name="levels">Levels</string>
    <string name="competitive">Competitive</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="settings">settings</string>
    <string name="credits">Credits</string>
    <string name="logo">logo</string>
    <string name="best_score">Best Score:</string>
    <string name="zero">0</string>
    <string name="semicolon">:</string>
    <string name="three_zero">000</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sound_off">Mute Sound</string>
    <string name="inline_preferences">Settigns</string>
    <string name="next_level">Next</string>
    <string name="back">Back</string>
    <string name="play_again">Play Again</string>
</resources>
