<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_level"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageButton
        android:id="@+id/button_level_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:src="@drawable/ic_action_back"
        app:layout_constraintBottom_toBottomOf="@+id/text_level_tittle"
        app:layout_constraintEnd_toStartOf="@+id/text_level_tittle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_level_tittle"
        app:srcCompat="@drawable/ic_action_back"
        android:clickable="true"
        android:focusable="true"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="16dp"
        />

    <TextView
        android:id="@+id/text_level_tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_level_timer_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/zero"
        android:textAlignment="center"
        android:textColor="@color/textColor"
        android:textSize="80sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_level_semicolon"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_level_semicolon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/semicolon"
        android:textColor="@color/textColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_level_timer_seconds"
        app:layout_constraintEnd_toStartOf="@id/text_level_timer_millis"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/text_level_timer_seconds"
        app:layout_constraintTop_toTopOf="@+id/text_level_timer_seconds" />

    <TextView
        android:id="@+id/text_level_timer_millis"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom|center_horizontal"
        android:text="@string/three_zero"
        android:textColor="@color/textColor"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/text_level_timer_seconds"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/text_level_semicolon"
        app:layout_constraintTop_toTopOf="@+id/text_level_timer_seconds" />

    <com.avoupavou.timefrenzy.CircleProgressBar
        android:id="@+id/progressBar_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:max="998"
        app:min="0"
        app:progress="0"
        app:progressBarThickness="15dp"
        app:progressbarColor="@color/colorAccent" />

</android.support.constraint.ConstraintLayout>
